--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -43,18 +43,19 @@ ul {
     grid-template-columns: 
     "left-sidebar main-view"
     "now-playing-bar now-playing-bar";
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 414px 1fr;
     grid-template-rows: 1fr auto;
 }
 
 .left-sidebar {
     height: 500px;
+    width: 414px;
 }
 
 .main-header {
     display: flex;
     position: absolute;
-    right: 8px;
+    height: 64px;
 }
 
 button:hover {
@@ -108,4 +109,13 @@ button:hover {
     width: 30px;
     box-sizing: border-box;
     border-radius: 25px;
+}
+
+.now-playing-bar {
+    grid-column: 1 / -1;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    
 }
