--- a/react-vite/src/components/Playlist/Playlist.css
+++ b/react-vite/src/components/Playlist/Playlist.css
@@ -1,7 +1,11 @@
 .add-song-container {
-    color: black;
+    background-color: #121212;
+    color: white;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
 }
 
 .playlist-songs {
@@ -29,6 +33,8 @@
     list-style-type: none;
 }
 
-.add-playlist-button{
-
+#modal-content {
+    display: flex;
+    height: 75%;
+    width: 80%;
 }
