--- a/react-vite/src/components/AlbumDetails/AlbumDetails.css
+++ b/react-vite/src/components/AlbumDetails/AlbumDetails.css
@@ -1,11 +1,19 @@
 .album-details-container {
-    padding-bottom: 8rem;
+    padding-bottom: 200px;
+}
+
+.album-info-container {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .album-details-header {
     display: flex;
     align-items: center;
+    justify-content: space-between; 
     gap: 20px;
+    width: 100%; 
 }
 
 .album-details-art {
@@ -30,4 +38,14 @@
     font-size: 24px;
     font-weight: bold;
     margin: 0;
+}
+.album-details-header button  {
+    background-color: #007bff; 
+    color: white;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
 }
