--- a/react-vite/src/components/AlbumDetails/AlbumDetails.css
+++ b/react-vite/src/components/AlbumDetails/AlbumDetails.css
@@ -11,9 +11,10 @@
 .album-details-header {
     display: flex;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
     gap: 20px;
-    width: 100%; 
+    width: 80%;
+    margin:auto;
 }
 
 .album-details-art {
@@ -40,7 +41,7 @@
     margin: 0;
 }
 .album-details-header button  {
-    background-color: #007bff; 
+    background-color: #007bff;
     color: white;
     padding: 10px 15px;
     font-size: 16px;
