--- a/react-vite/src/components/AlbumDetails/AlbumDetails.css
+++ b/react-vite/src/components/AlbumDetails/AlbumDetails.css
@@ -14,7 +14,7 @@
     justify-content: space-between;
     gap: 20px;
     width: 80%;
-    margin:auto;
+    margin: auto;
 }
 
 .album-details-art {
@@ -40,13 +40,24 @@
     font-weight: bold;
     margin: 0;
 }
-.album-details-header button  {
-    background-color: #007bff;
-    color: white;
+
+.album-details-header button {
     padding: 10px 15px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin:15px;
+    margin: 15px;
 }
+
+.album-details-header .delete-button-album {
+    background-color: #ff4d4d;
+    color: white;
+}
+
+.song-info-details{
+    color: #666;
+    font-size: 14px;
+    font-weight: 400;
+  }
+  
