--- a/react-vite/src/components/Playlist/AddSongsPlaylist.css
+++ b/react-vite/src/components/Playlist/AddSongsPlaylist.css
@@ -1,4 +1,3 @@
-/* Assuming AddSongsPlaylist.css is similar to AddSongs.css, ensure consistency in styles. */
 .playlist-song-modal-container {
     background-color: #282828; 
     color: #FFFFFF; 
@@ -33,8 +32,8 @@
 }
 
 .playlist-song-image {
-    width: 50px; /* Adjust size as necessary */
-    height: 50px; /* Adjust size as necessary */
+    width: 50px; 
+    height: 50px; 
     margin-right: 10px;
     border-radius: 4px;
 }
