add song to playlist debug

--- a/react-vite/src/components/Playlist/AddSongsPlaylist.css
+++ b/react-vite/src/components/Playlist/AddSongsPlaylist.css
@@ -1,28 +1,28 @@
 .playlist-song-modal-container {
-    background-color: #282828; 
-    color: #FFFFFF; 
-    padding: 20px; 
+    background-color: #282828;
+    color: #FFFFFF;
+    padding: 20px;
     width: 100%;
 }
 
 .playlist-song-modal-title {
-    color: #1DB954; 
-    margin-bottom: 20px; 
+    color: #1DB954;
+    margin-bottom: 20px;
 }
 
 .playlist-song-list {
-    list-style: none; 
-    padding: 0; 
-    margin: 0; 
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .playlist-song-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px; 
-    padding: 10px; 
-    border-radius: 4px; 
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 4px;
     background-color: #333333;
 }
 
@@ -32,8 +32,8 @@
 }
 
 .playlist-song-image {
-    width: 50px; 
-    height: 50px; 
+    width: 50px;
+    height: 50px;
     margin-right: 10px;
     border-radius: 4px;
 }
@@ -44,10 +44,19 @@
 }
 
 .playlist-song-add-btn {
-    background-color: #1DB954; 
-    color: #FFFFFF; 
-    border: none; 
-    padding: 8px 16px; 
-    border-radius: 20px; 
-    cursor: pointer; 
+    background-color: #1DB954;
+    color: #FFFFFF;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 20px;
+    cursor: pointer;
 }
+
+button:disabled,
+    button[disabled] {
+        border: 1px solid black;
+        background-color: grey;
+        color: white;
+        padding: 15px;
+        cursor: not-allowed;
+    }
