--- a/react-vite/src/components/AllAlbums/AllAlbums.css
+++ b/react-vite/src/components/AllAlbums/AllAlbums.css
@@ -1,35 +1,35 @@
 .all-albums-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 3rem;
     padding: 40px;
     /* background-color: #121212; */
     justify-content: center;
   }
-  
+
   .all-album-item {
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    width: 180px; 
+    width: 180px;
     background-color: #181818;
     color: #fff;
     border-radius: 8px;
     overflow: hidden;
     transition: transform 0.2s ease-in-out;
   }
-  
+
   .all-album-item:hover {
     transform: scale(1.05);
   }
-  
+
   .all-album-image {
     width: 100%;
     height: auto;
-    aspect-ratio: 1; 
+    aspect-ratio: 1;
     object-fit: cover;
   }
-  
+
   .all-album-title {
     padding: 12px;
     text-align: center;
@@ -38,4 +38,3 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  
