--- a/react-vite/src/components/LoginFormPage/LoginForm.css
+++ b/react-vite/src/components/LoginFormPage/LoginForm.css
@@ -100,6 +100,7 @@
 
 #submit-login:hover {
     background-color: #1DB954;
+    transform: scale(1.05); 
 }
 
 .demo-login {
@@ -122,6 +123,7 @@
 
 .demo-login:hover {
     color: #1DB954;
+    transform: scale(1.05);
 }
 
 .register-link {
