--- a/react-vite/src/components/SongDetail/SongDetail.css
+++ b/react-vite/src/components/SongDetail/SongDetail.css
@@ -66,7 +66,7 @@
     cursor: pointer;
 }
 
-.edit-song{
+.edit-song {
     background-color: white;
     color: black;
     padding: 10px 15px;
@@ -74,6 +74,11 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.edit-song:hover,
+.delete-song-detail:hover {
+    transform: scale(1.05);
 }
 
 .manage-songs-btn {
@@ -89,8 +94,19 @@
     margin: 20px 0;
 }
 
+.manage-songs-btn:hover {
+    transform: scale(1.05);
+}
 
-.album-link{
-    color:white;
+
+.album-link {
+    display: flex;
+    color: #a0a0a0;
     text-decoration: none;
+    padding-bottom: 1rem;
+}
+
+.album-link:hover {
+    cursor: pointer;
+    color: white;
 }
